# tiscamera-tcamprop

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: package-name.cmake
src/: CMakeLists.txt  Tcam-1.0.h  tcam-property-1.0.c  tcam-property-1.0.h  tcamprop-1.0-impl.c  tcamprop-1.0-impl.h  tcamprop.c  tcamprop.h
src/gst/meta/: CMakeLists.txt
